# azul-box

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  rust.yml
bin-script/: azul_box.desktop  install.sh
desktop/flatpak/: cargo-sources.json  io.codeberg.tahoso.azul_box.desktop  io.codeberg.tahoso.azul_box.metainfo.xml  io.codeberg.tahoso.azul_box.yml  page.codeberg.tahoso.azul-box.desktop  page.codeberg.tahoso.azul-box.metainfo.xml  page.codeberg.tahoso.azul-box.yml  page.codeberg.tahoso.azul_box.desktop  page.codeberg.tahoso.azul_box.metainfo.xml  page.codeberg.tahoso.azul_box.yml
src/: main.rs
src/app/: ffmpeg.rs  img_convert.rs  mod.rs  music_dl.rs  pinterest.rs  video_convert.rs  video_dl.rs
src/app/cores/: config.rs  cover.rs  depen_manager.rs  files.rs  kugou.rs  lang.rs  log_location.rs  lrclib.rs  lyrics.rs  mod.rs  musicbrainz.rs  notify.rs  string_cleaner.rs  translate.rs  url_checker.rs  ytdlp.rs
src/app/share_view/: lang_widget.rs  mod.rs  url_status_view.rs
src/app/shares/: config.rs  cover.rs  lang.rs  lrclib.rs  lyrics.rs  mod.rs  musicbrainz.rs  notify.rs  ytdlp.rs
src/ui/: img_convert.rs  music_dl.rs  pinterest.rs  video_convert.rs  video_dl.rs
src/ui/shares/: lang.rs  lrclib.rs  musicbrainz.rs
