[package]
name = "azul-box"
authors = ["Tahoso", "https://codeberg.org/Tahoso/azul-box"]
version = "0.2.6"
edition = "2024"
description = "A utility box for ffmpeg, yt-dlp, and more"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://codeberg.org/Tahoso/azul-box"
repository = "https://codeberg.org/Tahoso/azul-box"


[dependencies]
base64 = "0.22.1"
dirs = "6.0.0"
eframe = "0.33.3"
ftail = "0.3.1"
image = "0.25.9"
lofty = "0.23.2"
log = "0.4.29"
native-dialog = "0.9.6"
regex = "1.12.2"
rodio = "0.21.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textdistance = "1.1.1"
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "1.0.3"
ureq = { version = "3.2.0", features = ["json"] }
url = "2.5.8"
zip = "8.1.0"
